--- a/css/custom.css
+++ b/css/custom.css
@@ -20,3 +20,10 @@
 .nav-item{
   font-size: 20px;
 }
+
+.centeredX {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
