--- a/css/custom.css
+++ b/css/custom.css
@@ -23,7 +23,11 @@
 
 .centeredX {
   position: absolute;
-  top: 50%;
+  top: 55%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -45%);
 }
+
+.startPageImage {display: inline-block; max-width: 800px; max-height: 800px;}
+
+.startPageImage img {max-width: 100%; height:auto;}
