--- a/css/custom.css
+++ b/css/custom.css
@@ -31,3 +31,7 @@
 .startPageImage {display: inline-block; max-width: 800px; max-height: 800px;}
 
 .startPageImage img {max-width: 100%; height:auto;}
+
+.custom-bg-col {
+  background-color: rgba(45, 105, 194, 0.24);
+}
